--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "solarpanelmanagementsystemfrontend",
-    "userInterfaceStyle": "automatic",
+    "scheme": "solarpanelsystem",
+    "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash-icon.png",
@@ -34,5 +34,6 @@
     "experiments": {
       "typedRoutes": true
     }
+    
   }
 }
