--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.11",
     "expo-font": "~13.3.1",
@@ -26,9 +27,14 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.20.0"
   },
   "devDependencies": {
