--- a/package.json
+++ b/package.json
@@ -4,30 +4,59 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.4.2",
     "@expo/vector-icons": "^14.1.0",
+    "@gluestack-ui/accordion": "^1.0.14",
+    "@gluestack-ui/actionsheet": "^0.2.53",
+    "@gluestack-ui/alert-dialog": "^0.1.38",
+    "@gluestack-ui/avatar": "^0.1.18",
+    "@gluestack-ui/button": "^1.0.14",
+    "@gluestack-ui/divider": "^0.1.10",
+    "@gluestack-ui/fab": "^0.1.28",
+    "@gluestack-ui/form-control": "^0.1.19",
+    "@gluestack-ui/icon": "^0.1.27",
+    "@gluestack-ui/image": "^0.1.17",
+    "@gluestack-ui/input": "^0.1.38",
+    "@gluestack-ui/link": "^0.1.29",
+    "@gluestack-ui/modal": "^0.1.41",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/pressable": "^0.1.23",
+    "@gluestack-ui/progress": "^0.1.18",
+    "@gluestack-ui/select": "^0.1.31",
+    "@gluestack-ui/switch": "^0.1.29",
+    "@gluestack-ui/toast": "^1.0.9",
+    "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.11",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "dayjs": "^1.11.13",
+    "expo": "53.0.20",
     "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
-    "expo-splash-screen": "~0.30.9",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
+    "lucide-react-native": "^0.515.0",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
+    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-pager-view": "6.7.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
@@ -35,13 +64,16 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.20.0"
+    "react-native-web": "~0.20.0",
+    "tailwindcss": "^3.4.17",
+    "expo-crypto": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.9",
+    "jscodeshift": "^0.15.2",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
