--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,15 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "tailwind.config": [
+        "./tailwind.config.js"
+      ],
+      "@utils": [
+        "./utils/*"
+      ],
+      "@components": [
+        "./components/*"
       ]
     }
   },
@@ -12,6 +21,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
