--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@gluestack-ui/pressable": "^0.1.23",
     "@gluestack-ui/progress": "^0.1.18",
     "@gluestack-ui/select": "^0.1.31",
+    "@gluestack-ui/slider": "^0.1.32",
     "@gluestack-ui/switch": "^0.1.29",
     "@gluestack-ui/toast": "^1.0.9",
     "@legendapp/motion": "^2.4.0",
@@ -41,6 +42,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "dayjs": "^1.11.13",
     "expo": "53.0.20",
+    "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
@@ -65,8 +67,7 @@
     "react-native-svg": "15.11.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-crypto": "~14.1.5"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
