--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@gluestack-ui/slider": "^0.1.32",
     "@gluestack-ui/switch": "^0.1.29",
     "@gluestack-ui/toast": "^1.0.9",
+    "@gluestack-ui/tooltip": "^0.1.44",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
