--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "firebase": "^12.0.0",
     "lucide-react-native": "^0.515.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
